--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css" integrity="sha384-N7gull5mxE2uLDqZ+kcZolhmuopwLtTcThUsVnUS2LVMQljojN9cfJ9A6fUA63zB" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css" integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/brands.min.css" integrity="sha512-bSncow0ApIhONbz+pNI52n0trz5fMWbgteHsonaPk42JbunIeM9ee+zTYAUP1eLPky5wP0XZ7MSLAPxKkwnlzw==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css" integrity="sha512-f8mUMCRNrJxPBDzPJx3n+Y5TC5xp6SmStstEfgsDXZJTcxBakoB5hvPLhAfJKa9rCvH+n3xpJ2vQByxLk4WP2g==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="css/upriver.css">
     <title>Upriver - keep up with upstream</title>
     <meta name="description" content="Effortlessly sync your GitHub repositories with upstream using only the GitHub API.">
@@ -13,104 +13,105 @@
     <link rel="canonical" href="https://upriver.github.io">
   </head>
   <body class="mb-5">
-    <nav class="navbar navbar-inverse bg-inverse">
-      <a class="navbar-brand" href="/">Upriver</a>
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Upriver</a>
+      </div>
     </nav>
 
     <header class="pt-5 text-center">
       <div class="container">
-        <h1 class="display-3">keep up with upstream</h1>
+        <h1 class="display-2">keep up with upstream</h1>
         <p>effortlessly sync your GitHub repositories with upstream using only the GitHub API</p>
       </div>
     </header>
 
     <main class="pt-5">
-      <div class="container" id="signin">
+      <div class="container-fluid" id="signin">
         <div class="input-group justify-content-center">
-          <div class="input-group-btn">
-            <a role="button" class="btn btn-lg btn-social btn-github" href="https://github.com/login/oauth/authorize?client_id=d39dea3b2637ce0c4fdb&scope=repo">
-              <span class="fa fa-github"></span> Sign in with GitHub
-            </a>
-            <button type="button" class="btn btn-lg btn-github dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <span class="sr-only">Toggle Dropdown</span>
-            </button>
-            <div class="dropdown-menu dropdown-menu-right">
+          <a class="btn btn-block btn-social btn-github btn-lg" href="https://github.com/login/oauth/authorize?client_id=d39dea3b2637ce0c4fdb&scope=repo">
+            <span class="fa-brands fa-github"></span> Sign in with GitHub
+          </a>
+          <button type="button" class="btn btn-block btn-social btn-github dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+            <span class="visually-hidden">Toggle Dropdown</span>
+          </button>
+          <ul class="dropdown-menu">
+            <li>
               <a class="dropdown-item" href="https://github.com/login/oauth/authorize?client_id=d39dea3b2637ce0c4fdb&scope=repo">Private and public repos</a>
+            </li>
+            <li>
               <a class="dropdown-item" href="https://github.com/login/oauth/authorize?client_id=d39dea3b2637ce0c4fdb&scope=public_repo">Public repos only</a>
-            </div>
-          </div>
+            </li>
+          </ul>
         </div>
       </div>
 
       <div class="container text-center" id="controls" style="display: none;">
         <div class="col-md-6 offset-md-3">
-          <form class="form">
-            <div class="row">
-              <strong class="col-4 pb-2">Pull commits:</strong>
-            </div>
-            <div class="form-group row">
-              <label class="col-4 col-form-label" for="forkRepo">into</label>
+          <form id="form">
+            <div class="row mb-3">
+              <div class="col-4">
+                <label class="form-label" for="forkRepo">into</label>
+              </div>
               <div class="col-8">
-                <select class="form-control" id="forkRepo">
-                </select>
+                <select class="form-control" id="forkRepo"></select>
               </div>
             </div>
-            <div class="form-group row">
-              <label class="col-4 col-form-label" for="forkBranch">branch</label>
+            <div class="row mb-3">
+              <div class="col-4">
+                <label class="form-label" for="forkBranch">branch</label>
+              </div>
               <div class="col-8">
-                <select class="form-control" id="forkBranch">
-                </select>
+                <select class="form-control" id="forkBranch"></select>
               </div>
             </div>
-            <div class="form-group row">
-              <label class="col-4 col-form-label" for="parentRepo">from</label>
+            <div class="row mb-3">
+              <div class="col-4">
+                <label class="form-label" for="parentRepo">from</label>
+              </div>
               <div class="col-8">
-                <select class="form-control" id="parentRepo">
-                </select>
+                <select class="form-control" id="parentRepo"></select>
               </div>
             </div>
-            <div class="form-group row">
-              <label class="col-4 col-form-label" for="parentBranch">branch</label>
+            <div class="row mb-3">
+              <div class="col-4">
+                <label class="form-label" for="parentBranch">branch</label>
+              </div>
               <div class="col-8">
-                <select class="form-control" id="parentBranch">
-                </select>
+                <select class="form-control" id="parentBranch"></select>
               </div>
             </div>
-            <div class="row">
-              <label class="col-4 col-form-label" for="force">
-                <span data-toggle="tooltip" data-placement="left" title="Use the force Luke! You will lose any commits in your fork that are not in upstream.">
-                  force?
-                </span>
-              </label>
+            <div class="row mb-3">
+              <div class="col-4">
+                <label class="form-label" for="force">
+                  <span data-bs-toggle="tooltip" data-bs-placement="left" title="Use the force Luke! You will lose any commits in your fork that are not in upstream.">
+                    force?
+                  </span>
+                </label>
+              </div>
               <div class="col-8">
-                <div class="checkbox float-left">
-                  <input type="checkbox" id="force">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="force">
                 </div>
               </div>
             </div>
-            <div class="row">
-              <div class="col-3 offset-4">
-                <button type="button" class="btn btn-block btn-primary" id="pull">Pull</button>
-              </div>
-            </div>
+            <button type="submit" class="btn btn-primary">Pull</button>
           </form>
         </div>
       </div>
 
-      <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="pull" aria-hidden="true">
-        <div class="modal-dialog" role="document">
+      <div class="modal" id="modal" tabindex="-1">
+        <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Results</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
+              <h5 class="modal-title">Results</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
               <pre></pre>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
@@ -123,10 +124,10 @@
       </div>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha384-xBuQ/xzmlsLoJpyjoggmTEz8OWUFM0/RC5BsqQBDX2v5cMvDHcMakNTNrHIW2I5f" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/async/2.5.0/async.min.js" integrity="sha384-n4kFbvGyjqv9rvEitwLxGTr6T2iX5AypfPZ06nIj0l34MdTHtruqnXpOXyAnTsl2" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.2/umd/popper.min.js" integrity="sha512-aDciVjp+txtxTJWsp8aRwttA0vR2sJMk/73ZT7ExuEHv7I5E6iyyobpFOlEFkq59mWW8ToYGuVZFnwhwIUisKA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/js/bootstrap.min.js" integrity="sha512-OvBgP9A2JBgiRad/mM36mkzXSXaJE9BEIENnVEmeZdITvwT09xnxLtT4twkCa8m/loMbPHsvPl0T8lRGVBwjlQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/async/3.2.3/async.min.js" integrity="sha512-M4zr+hVU3vxJdAHO+zjPTfKt+roErD+iK4OsstM1iMf7Rh9qko+Xt6ClPFCZSwtUMzTndo786uky71FvlkD+Mw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/upriver.js"></script>
   </body>
 </html>
