--- a/index.html
+++ b/index.html
@@ -13,9 +13,19 @@
     <link rel="canonical" href="https://upriver.github.io">
   </head>
   <body class="mb-5">
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Upriver</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="https://github.com/upriver/upriver.github.io">Source</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
 
