--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.2/umd/popper.min.js" integrity="sha512-aDciVjp+txtxTJWsp8aRwttA0vR2sJMk/73ZT7ExuEHv7I5E6iyyobpFOlEFkq59mWW8ToYGuVZFnwhwIUisKA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/js/bootstrap.min.js" integrity="sha512-OvBgP9A2JBgiRad/mM36mkzXSXaJE9BEIENnVEmeZdITvwT09xnxLtT4twkCa8m/loMbPHsvPl0T8lRGVBwjlQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/async/3.2.3/async.min.js" integrity="sha512-M4zr+hVU3vxJdAHO+zjPTfKt+roErD+iK4OsstM1iMf7Rh9qko+Xt6ClPFCZSwtUMzTndo786uky71FvlkD+Mw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://www.googletagmanager.com/gtag/js?id=G-Y9H50SGVVY" async></script>
     <script src="js/upriver.js"></script>
   </body>
 </html>
